@@ -6,7 +6,9 @@ plugins {
 }
 
 repositories {
+    google()
     mavenCentral()
+    flatDir(dirs: 'lib')
 }
 
 group 'eu.telecomnancy'
@@ -32,7 +34,7 @@ application {
 jar {
     manifest {
         attributes(
-            'Main-Class': application.mainClass
+            'Main-Class': application.mainClass,
         )
     }
 }
@@ -42,16 +44,54 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
-dependencies {
-	testImplementation(platform('org.junit:junit-bom:5.10.1'))
-	testImplementation('org.junit.jupiter:junit-jupiter')
+
+sourceSets {
+    main {
+        resources {
+            srcDirs = ['src/main/resources']
+        }
+    }
 }
+
+
+dependencies {
+    implementation 'org.openjfx:javafx-base:17'
+    implementation 'org.json:json:20210307'
+    testImplementation(platform('org.junit:junit-bom:5.10.1')) {
+        exclude group: 'org.hamcrest', module: 'hamcrest-core'
+    }
+    testImplementation('org.junit.jupiter:junit-jupiter') {
+        exclude group: 'org.hamcrest', module: 'hamcrest-core'
+    }
+}
+
+
 
 test {
     useJUnitPlatform()
 
     testLogging {
         events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.fxml',
+        ]
+        classpath = files()
+    }
+}
+run{
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.fxml',
+        ]
     }
 }
 
